--- a/css/styles.css
+++ b/css/styles.css
@@ -139,3 +139,12 @@ a.custom-card:hover {
 .checked {
   color: orange;
 }
+
+.star {
+  font-style: normal !important;
+  font-size: 16px !important;
+}
+
+.star-dark {
+  color: black;
+}
