Agregada pagina de carrito, con muchas funcionalidades, entre ellas calcular el subtotal, elegir tipo de envio y calcular total

--- a/css/styles.css
+++ b/css/styles.css
@@ -154,10 +154,10 @@ a.custom-card:hover {
   background-color: #c3277d;
 }
 
-.dropdown-login{
+.bg-light-pink{
   background-color: #fbe7ea;
 }
 
-.dropdown-item-login{
+.text-pink{
   color: #c3277d;
 }
